Full change (deleted the older contents that was done by my team mates) added new contents changed a little bit of layout design next push would based on code validation
Signed-off-by: YousufD2 <48338941+YousufD2@users.noreply.github.com>

--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -2,170 +2,133 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academic Writing</title>
-  <link rel="stylesheet" href="sub.css" type="text/css">
+  <title>Critical Thinking</title>
+  <link rel="stylesheet" href="main.css" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
 <body>
-<header>
-  <div class="widthsize">
-    <img src="title.png" alt="CDU logo" class="logo">
-    <label>
-      <input type="text" placeholder="Search..." class="searchbar">
-    </label>
-  </div>
-</header>
-
-<section>
-  <div class="widthsize">
-    <nav>
-      <ul class="main-nav js--main-nav">
-        <li>
-          <a href="https://www.cdu.edu.au/">CDU Home</a>
-        </li>
-        <li>
-          <a href="https://www.cdu.edu.au/library/">Library</a>
-        </li>
-        <li>
-          <a href="https://www.cdu.edu.au/current-students/my-cdu">Current Students</a>
-        </li>
-        <li>
-          <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
-        </li>
+  <header>
+    <nav class="second-nav">
+      <div class="toggle">
+        <a class="fas fa-bars menu" aria-hidden="true"></a>
+      </div>
+      <ul class="second-ul">
+        <li><a href="https://www.cdu.edu.au/">CDU Home</a></li>
+        <li><a href="https://www.cdu.edu.au/library/">Library</a></li>
+        <li><a href="https://portal.cdu.edu.au/my.policy">CDU Portal</a></li>
+        <li><a href="http://stapps.cdu.edu.au/f?p=100:30:0::NO:::">Courses</a></li>
+        <li><a href="https://www.cdu.edu.au/faculties-schools">Colleges & Faculties</a></li>
+        <li><a href="https://www.cdu.edu.au/current-students">Current Student</a></li>
+        <li><a href="https://www.cdu.edu.au/contact-cdu">Contact Us</a></li>
       </ul>
-      <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
-  </div>
+    <div class="widthsize">
+    </div>
+    <br><br>
+  </header>
+  <section>
+    <div class="widthsize">
+      <img src="title.png" alt="CDU logo" class="logo">
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="index.html">Critical Thinking</a>
+        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
+        <a href="reading_critically.html">Reading Critically</a>
+        <a href="academic_writing.html">For Academic Writing</a>
+      </div>
+      <div id="main">
+        <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
+      </div>
+    </div>
+  </section>
+  <section class="section-style js--section-style">
+    <div class="widthsize">
+      <h2>Critical Writing</h2>
+      <div class="container">
+      <div class="card-wrapper">
 
-  <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/subpage1.html">What does critical thinking involve?</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/reading_critically.html">Reading Critically</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/academic_writing.html">Academic Assignments</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/Tutorial%20and%20Seminar.html">Tutorial and Seminar Presentation</a>
-  </div>
-
-  <div id="main">
-    <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
-  </div>
-</section>
-
-<section class="section-style js--section-style">
-  <div class="widthsize">
-    <h2>Critical Thinking For Academic Writing</h2>
-
+   <iframe src="critical_writing.mp4"></iframe>
+   </div>
+   </div>
+    </div>
+  </section>
+  <section>
     <div class="container">
       <div class="card-wrapper">
         <div class="card">
-
           <div class="subheading">
-          <h3>For Academic Writing</h3>
-          </div>
-
-          <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+          <h3>What is Critical Writing?</h3>
+        </div>
+          <img src="subimage7.jpg" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
           <p>
-            When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
+             Critical writing involves considering evidence to make reasoned conclusions. A mistake many beginning writers make is to use only one source to support their ideas
           </p>
+        </div>
+          <div class="button-style">
+            <a class="button" href="https://www.eapfoundation.com/writing/critical/">learn more</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="subheading">
+          <h3>Why Critical Writing is unique?</h3>
+        </div>
+          <img src="subimage8.png" alt="photo2" class="card-img" style="width:100%">
+          <div class="container-p">
           <p>
-            Ask yourself the following questions when you are planning and writing your first draft.
+            It is more like to develop argument and participate in the academic debate. You need to weigh up the evidence and arguments of others, and to contribute your own
           </p>
+        </div>
+          <div class="button-style">
+              <a class="button" href="https://www2.le.ac.uk/offices/ld/resources/writing/writing-resources/critical-writing">Learn More</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="subheading-2">
+          <h3>How can you improve Critical Writing? </h3>
+        </div>
+          <img src="subimage9.jpg" alt="photo3" class="card-img" style="width:100%">
+          <div class="container-p">
+          <p >
+            Engane into a description, analyse and evaluate the claims. To do as such raise concerns like What? Where? How? Why? What If? What next?
+          </p>
+        </div>
+          <div class="button-style">
+            <a class="button" href="https://intranet.birmingham.ac.uk/as/libraryservices/library/skills/asc/documents/public/pgtcriticalwriting.pdf">Learn More</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!--Introduction nad parpgraph section end-->
-
-<!-- all the card contents-->
-
-<section>
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card">
-        <div class="subheading-2">
-          <h3>List of Question</h3>
-        </div>
-        <div class="QQ">
-          1. What is your purpose in writing?
-        </div>
-        <div class="QQ">
-          2. Have you clearly formulated your thesis/argument?
-        </div>
-        <div class="QQ">
-          3. Have you gathered the evidence to support your argument? Is your argument rational and logical?
-        </div>
-        <div class="QQ">
-          4. Is your argument rational and logical?
-        </div>
-
-        <div class="container-p">
-          <p>
-            5.Have you provided your reader with accurate references?
-          </p>
-        </div>
-
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="subheading-2">
-          <h3>List of Question</h3>
-        </div>
-        <div class="QQ">
-          6. Have you read widely to gain a broad perspective on the topic?
-        </div>
-        <div class="QQ">
-          7. Have you gathered the evidence to support your argument?
-        </div>
-        <div class="QQ">
-          8. Have you been accurate in your claims?
-        </div>
-        <div class="QQ">
-          9. Have you addressed the question?
-        </div>
-
-        <div class="container-p">
-          <p>
-          10. Have you expressed yourself clearly? Have you used examples to illustrate your point?
-          </p>
-        </div>
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<footer class=>
-  <div class="widthsize">
-    <div >
-      <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
-      </ul>
-    </div>
-
+  </section>
+  <footer class=>
     <div class="widthsize">
-      <h4>
-        Copyright: 2019 by CDU. ALL right reserve
-      </h4>
+      <div>
+        <ul class="social-links">
+          <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+          <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+          <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
+        </ul>
+      </div>
+      <div class="widthsize">
+        <h4>
+          Copyright: 2019 by CDU. ALL right reserve
+        </h4>
+      </div>
     </div>
-  </div>
-</footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="jquery.waypoints.min.js"></script>
-<script src="script.js" type="text/javascript"></script>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="jquery.waypoints.min.js"></script>
+  <script src="script.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.menu').click(function() {
+        $('ul').toggleClass('active');
+      })
+    })
+  </script>
 </body>
+
 </html>
