--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -6,192 +6,154 @@
   <link rel="stylesheet" href="main.css" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
 <body>
-<header>
-  <div class="widthsize">
-  <nav class="second-nav">
-    <div  class="toggle">
-      <a class="fas fa-bars menu" aria-hidden="true"></a>
-    </div>
+  <header>
+    <nav class="second-nav">
+      <div class="toggle">
+        <a class="fas fa-bars menu" aria-hidden="true"></a>
+      </div>
       <ul class="second-ul">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Introduction</a></li>
-        <li><a href="#">Definition</a></li>
-        <li><a href="#">Decision Making</a></li>
-        <li><a href="#"> involvement</a></li>
-        <li><a href="#">Reading Critically</a></li>
-        <li><a href="#"> presentation</a></li>
+        <li><a href="https://www.cdu.edu.au/">CDU Home</a></li>
+        <li><a href="https://www.cdu.edu.au/library/">Library</a></li>
+        <li><a href="https://portal.cdu.edu.au/my.policy">CDU Portal</a></li>
+        <li><a href="http://stapps.cdu.edu.au/f?p=100:30:0::NO:::">Courses</a></li>
+        <li><a href="https://www.cdu.edu.au/faculties-schools">Colleges & Faculties</a></li>
+        <li><a href="https://www.cdu.edu.au/current-students">Current Student</a></li>
+        <li><a href="https://www.cdu.edu.au/contact-cdu">Contact Us</a></li>
       </ul>
     </nav>
-
-  </div>
-  <br><br>
-</header>
-
-<section>
-  <div class="widthsize">
-    <img src="title.png" alt="CDU logo" class="logo">
-</section>
-
-<section class="section-style js--section-style">
-  <div class="widthsize">
-    <h2>Critical thinking</h2>
-
-    <div class="container">
-      <div class="card-wrapper">
-        <div class="card">
-          <div class="subheading">
-          <h3>Introduction</h3>
-        </div>
-            <img class="image-logo" src="7.png" alt="critical thinking explain">
-          <div class="container-p">
-          <p>
-             Critical thinking is necessary and benefit for students.
-          </p>
-        </div>
-          <div class="button-style">
-            <a class="button">Learn More</a>
+    <div class="widthsize">
+    </div>
+    <br><br>
+  </header>
+  <section>
+    <div class="widthsize">
+      <img src="title.png" alt="CDU logo" class="logo">
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="index.html">Critical Thinking</a>
+        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
+        <a href="reading_critically.html">Reading Critically</a>
+        <a href="academic_writing.html">For Academic Writing</a>
+      </div>
+      <div id="main">
+        <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
+      </div>
+    </div>
+  </section>
+  <section class="section-style js--section-style">
+    <div class="widthsize">
+      <h2>Critical thinking</h2>
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="subheading">
+              <h3>Introduction</h3>
+            </div>
+            <img src="image1.jpeg" alt="photo3" class="card-img" style="width:100%">
+            <div class="container-p">
+              <p>
+                A process of evaluating information by testing assumptions, accepting and rejecting arguments and applying reasoning to make informed decisions.
+              </p>
+            </div>
+            <div class="button-style">
+              <a class="button" href="">Learn More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="subheading-2">
+              <h3>What Does Critical Thinking Involve</h3>
+            </div>
+            <img src="image1.jpeg" alt="photo3" class="card-img" style="width:100%">
+            <div class="container-p">
+              <p>
+                Critical thinking involves active involvement. You are not passively accepting everything that you read or hear but are questioning
+              </p>
+            </div>
+            <div class="button-style">
+              <a class="button" href="what_does_critical_thinking_involve.html">Learn More</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!--Introduction nad parpgraph section end-->
-
-<!-- all the card contents-->
-
-<section>
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card">
-        <div class="subheading-2">
-          <h3>Definition</h3>
+  </section>
+  <section>
+    <div class="container">
+      <div class="card-wrapper">
+        <div class="card">
+          <div class="subheading">
+            <h3>Tutorial and Seminar</h3>
+          </div>
+          <img src="3.jpg" alt="photo2" class="card-img" style="width:100%">
+          <div class="container-p">
+            <p>
+              Critical thinking enhances language and presentation skills. Thinking clearly and systematically can improve the way we express our ideas.
+            </p>
+          </div>
+          <div class="button-style">
+            <a class="button" href="tutorial_and_seminar.html">Learn More</a>
+          </div>
         </div>
-        <img src="4.png" alt="photo3" class="card-img" style="width:100%">
-        <div class="container-p">
-          <p >
-            Critical thinking is a process, the goal of which is to make reasonable decisions about what to believe and what to do.
-          </p>
+        <div class="card">
+          <div class="subheading-2">
+            <h3>Reading Critical</h3>
+          </div>
+          <img src="4.jpg" alt="photo3" class="card-img" style="width:100%">
+          <div class="container-p">
+            <p>
+              One of the key strategies you can use when reading critically is to ask yourself a series of questions.
+            </p>
+          </div>
+          <div class="button-style">
+            <a class="button" href="reading_critically.html">Learn More</a>
+          </div>
         </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="subheading">
-        <h3>Critical Thinking is a Tool For Decision Making</h3>
-      </div>
-        <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Weighing up alternatives in order to make decisions is part of the critical thinking process.
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="subheading">
-        <h3>What Does Critical Thinking Involve</h3>
-      </div>
-        <img src="2.jpg" alt="photo2" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Critical thinking involves active involvement.You are not passively accepting everything that you read or hear but are questioning
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
+        <div class="card">
+          <div class="subheading-2">
+            <h3>For Academic Writing</h3>
+          </div>
+          <img src="5.jfif" alt="photo3" class="card-img" style="width:100%">
+          <div class="container-p">
+            <p>
+              When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
+            </p>
+          </div>
+          <div class="button-style">
+            <a class="button" href="academic_writing.html">Learn More</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card">
-        <div class="subheading-2">
-        <h3>Reading Critical</h3>
-      </div>
-        <img src="3.png" alt="photo3" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p >
-          One of the key strategies you can use when reading critically is to ask yourself a series of questions.
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button" href="reading_critically.html">Questions</a>
-        </div>
-      </div>
-
-
-      <div class="card">
-        <div class="subheading-2">
-        <h3>For Academic Writing</h3>
-      </div>
-        <img src="5.png" alt="photo3" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          When writing at university, your aim is to convince the reader by using critical thinking to promote your argument.
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button" href="academic_writing.html">Learn More</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="subheading">
-        <h3>Tutorial and Seminar Presentation</h3>
-      </div>
-        <img src="6.jpg" alt="photo3" class="card-img" style="width:100%">
-        <div class="container-p">
-        <p>
-          Before giving a presentation it is vital to consider your purpose.
-        </p>
-      </div>
-        <div class="button-style">
-          <a class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<footer class=>
-  <div class="widthsize">
-    <div >
-      <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
-      </ul>
-    </div>
-
+  </section>
+  <footer class=>
     <div class="widthsize">
-      <h4>
-        Copyright: 2019 by CDU. ALL right reserve
-      </h4>
+      <div>
+        <ul class="social-links">
+          <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+          <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+          <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
+        </ul>
+      </div>
+      <div class="widthsize">
+        <h4>
+          Copyright: 2019 by CDU. ALL right reserve
+        </h4>
+      </div>
     </div>
-  </div>
-</footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="jquery.waypoints.min.js"></script>
-<script src="script.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script type="text/javascript">
-   $(document).ready(function(){
-     $('.menu').click(function(){
-       $('ul').toggleClass('active');
-     })
-   })
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="jquery.waypoints.min.js"></script>
+  <script src="script.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.menu').click(function() {
+        $('ul').toggleClass('active');
+      })
+    })
   </script>
 </body>
+
 </html>
