--- a/Homepage/reading_critically.html
+++ b/Homepage/reading_critically.html
@@ -2,222 +2,134 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reading Critically</title>
-  <link rel="stylesheet" href="sub.css" type="text/css">
+  <title>Critical Thinking</title>
+  <link rel="stylesheet" href="main.css" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
 <body>
-<header>
-  <div class="widthsize">
-    <img src="title.png" alt="CDU logo" class="logo">
-    <label>
-      <input type="text" placeholder="Search ..." class="searchbar">
-    </label>
-  </div>
-</header>
-
-<section>
-  <div class="widthsize">
-    <nav>
-      <ul class="main-nav js--main-nav">
-        <li>
-          <a href="https://www.cdu.edu.au/">CDU Home</a>
-        </li>
-        <li>
-          <a href="https://www.cdu.edu.au/library/">Library</a>
-        </li>
-        <li>
-          <a href="https://www.cdu.edu.au/current-students/my-cdu">Current Students</a>
-        </li>
-        <li>
-          <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
-        </li>
+  <header>
+    <nav class="second-nav">
+      <div class="toggle">
+        <a class="fas fa-bars menu" aria-hidden="true"></a>
+      </div>
+      <ul class="second-ul">
+        <li><a href="https://www.cdu.edu.au/">CDU Home</a></li>
+        <li><a href="https://www.cdu.edu.au/library/">Library</a></li>
+        <li><a href="https://portal.cdu.edu.au/my.policy">CDU Portal</a></li>
+        <li><a href="http://stapps.cdu.edu.au/f?p=100:30:0::NO:::">Courses</a></li>
+        <li><a href="https://www.cdu.edu.au/faculties-schools">Colleges & Faculties</a></li>
+        <li><a href="https://www.cdu.edu.au/current-students">Current Student</a></li>
+        <li><a href="https://www.cdu.edu.au/contact-cdu">Contact Us</a></li>
       </ul>
-      <!--<a class="mobile-nav-icon"><img src="smallnav.png"/></a> -->
     </nav>
-    <a href="#" class="mobile-nav-icon js--nav-icon"><img src="smallnav.png" alt="smallnav"/></a>
-  </div>
+    <div class="widthsize">
+    </div>
+    <br><br>
+  </header>
+  <section>
+    <div class="widthsize">
+      <img src="title.png" alt="CDU logo" class="logo">
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="index.html">Critical Thinking</a>
+        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
+        <a href="reading_critically.html">Reading Critically</a>
+        <a href="academic_writing.html">For Academic Writing</a>
+      </div>
+      <div id="main">
+        <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
+      </div>
+    </div>
+  </section>
+  <section class="section-style js--section-style">
+    <div class="widthsize">
+      <h2>Reading Critically</h2>
+      <div class="container">
+      <div class="card-wrapper">
 
-  <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
-    <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/subpage1.html">What does critical thinking involve?</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/reading_critically.html">Reading Critically</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/academic_writing.html">Academic Assignments</a>
-    <a href="file:///C:/Users/Ditu/Desktop/Project/Final%20Project/Homepage/Tutorial%20and%20Seminar.html">Tutorial and Seminar Presentation</a>
-  </div>
-
-  <div id="main">
-    <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
-  </div>
-
-</section>
-<section class="section-style js--section-style">
-  <div class="widthsize">
-    <h2>Reading Critically</h2>
-
+   <iframe src="critical_reading.mp4"></iframe>
+   </div>
+   </div>
+    </div>
+  </section>
+  <section>
     <div class="container">
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>What is Reading Critically</h3>
-          </div>
-            <img src="1.png" alt="TitleCriticalThinking" class="card-img" style="width:100%">
+          <h3>Active Engagement In Lecture</h3>
+        </div>
+          <img src="subimage1.jpg" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
           <p>
-          One of the key strategies you can use when reading critically is to ask yourself a series of questions.Begin by asking questions which relate to the text overall and then look at the author’s argument and the evidence used to support it.
+            The process of analyzing, interpreting and evaluating when reading. Reading critically involves questioning both the text and our own reading of it.
+          </p>
+        </div>
+          <div class="button-style">
+            <a class="button" href="https://www.washington.edu/teaching/teaching-resources/engaging-students-in-learning/">learn more</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="subheading">
+          <h3>Self-Questioning</h3>
+        </div>
+          <img src="subimage6.jpg" alt="photo2" class="card-img" style="width:100%">
+          <div class="container-p">
           <p>
+            Begin by asking questions to yourself which relates to the text and then look at the author’s argument to use as an evidence used to support it.
+          </p>
+        </div>
+          <div class="button-style">
+              <a class="button" href="https://www.ucl.ac.uk/ioe-writing-centre/critical-reading-and-writing/critical-reading-questions">Learn More</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="subheading-2">
+          <h3>Personal Engagement</h3>
+        </div>
+          <img src="subimage6.png" alt="photo3" class="card-img" style="width:100%">
+          <div class="container-p">
+          <p >
+           Increase creativity yield relating the text with your personal knowledge and experience and to evaluate the claims from it
+          </p>
+        </div>
+          <div class="button-style">
+            <a class="button" href="https://www.ucl.ac.uk/ioe-writing-centre/critical-reading-and-writing/critical-reading-questions">Learn More</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!--Introduction nad parpgraph section end-->
-
-<!-- all the card contents-->
-
-<section>
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card">
-        <div class="subheading-2">
-          <h3>For examine the overall creditability of the text</h3>
-        </div>
-        <div class="QQ">
-          1. Who is the author and when was this written?
-        </div>
-        <div class="QQ">
-          2. What is the author’s approach and perspective?
-        </div>
-        <div class="QQ">
-          3. On first reading, does this seem a credible argument? Why?
-        </div>
-        <div class="QQ">
-            4. What are the main points of this text?
-        </div>
-
-        <div class="container-p">
-          <p>
-          5.What is the author saying? (Try to sum up the argument in your own words)
-          </p>
-        </div>
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="subheading-2">
-          <h3>Analysis the style and the tone of argument</h3>
-        </div>
-        <div class="QQ">
-          1.Is the argument clearly expressed?
-        </div>
-        <div class="QQ">
-          2. Does the author use emotive terms or examples to persuade the reader?
-        </div>
-        <div class="QQ">
-          3. What assumptions does the author make?
-        </div>
-        <div class="QQ">
-          4. Do these strategies enhance or detract from the argument?
-        </div>
-
-        <div class="container-p">
-          <p>
-          5. Does the writer’s language, tone or choice of examples reveal any biases? If so do these biases reduce the credibility of the argument?
-          </p>
-        </div>
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card">
-        <div class="subheading-2">
-          <h3>For examine the argument and evidence</h3>
-        </div>
-        <div class="QQ">
-          1. What is the quality of the evidence?(Is the evidence anecdotal or supported by research and/or scientific study?)
-        </div>
-        <div class="QQ">
-          2. Is the evidence recent and relevant?
-        </div>
-        <div class="QQ">
-          3. Which parts of the argument do I agree with and why?
-          </div>
-        <div class="QQ">
-          4. Is there a logical development of ideas?
-        </div>
-
-        <div class="container-p">
-          <p>
-          5. What is the quality of the evidence?(Is the evidence anecdotal or supported by research?)
-          </p>
-        </div>
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="subheading-2">
-          <h3>For Overall assessment of the writing</h3>
-        </div>
-        <div class="QQ">
-          1. What were the strengths of the argument?
-        </div>
-        <div class="QQ">
-          2. Does the writing challenge your own biases, assumptions and beliefs?
-        </div>
-        <div class="QQ">
-          3. What were the weaknesses of the argument?
-        </div>
-        <div class="QQ">
-          4. What connections do you see between this text and other texts?
-        </div>
-
-        <div class="container-p">
-          <p>
-          5. Are you capable of reviewing your beliefs/assumptions in the light of the argument presented?
-          </p>
-        </div>
-        <div class="button-style">
-          <a class="button" href="index.html">Back Home</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<footer class=>
-  <div class="widthsize">
-    <div >
-      <ul  class="social-links">
-        <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
-        <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
-        <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
-      </ul>
-    </div>
-
+  </section>
+  <footer class=>
     <div class="widthsize">
-      <h4>
-        Copyright: 2019 by CDU. ALL right reserve
-      </h4>
+      <div>
+        <ul class="social-links">
+          <li><a href="https://www.facebook.com/CharlesDarwinUniversity/"> <img src="facebook.png" class="logo-mini" alt="FaceBook"></a></li>
+          <li><a href="https://twitter.com/cduni?lang=en"> <img src="twitter.png" class="logo-mini" alt="Twitter"></a></li>
+          <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini" alt="Instagram"></a></li>
+        </ul>
+      </div>
+      <div class="widthsize">
+        <h4>
+          Copyright: 2019 by CDU. ALL right reserve
+        </h4>
+      </div>
     </div>
-  </div>
-</footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="jquery.waypoints.min.js"></script>
-<script src="script.js" type="text/javascript"></script>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="jquery.waypoints.min.js"></script>
+  <script src="script.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.menu').click(function() {
+        $('ul').toggleClass('active');
+      })
+    })
+  </script>
 </body>
+
 </html>
