added video tag instead of iframe. deteled some unnecessary files such as images and .idea and sub.css
Signed-off-by: YousufD2 <48338941+YousufD2@users.noreply.github.com>

--- a/Homepage/academic_writing.html
+++ b/Homepage/academic_writing.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav class="second-nav">
@@ -32,7 +34,7 @@
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="index.html">Critical Thinking</a>
-        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="what_does_critical_thinking_involve.html">What Does Critical Thinking Involve</a>
         <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
         <a href="reading_critically.html">Reading Critically</a>
         <a href="academic_writing.html">For Academic Writing</a>
@@ -46,11 +48,12 @@
     <div class="widthsize">
       <h2>Critical Writing</h2>
       <div class="container">
-      <div class="card-wrapper">
-
-   <iframe src="critical_writing.mp4"></iframe>
-   </div>
-   </div>
+        <div class="card-wrapper">
+          <video controls>
+            <source src="critical_writing.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
     </div>
   </section>
   <section>
@@ -58,14 +61,14 @@
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>What is Critical Writing?</h3>
-        </div>
+            <h3>What is Critical Writing?</h3>
+          </div>
           <img src="subimage7.jpg" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-             Critical writing involves considering evidence to make reasoned conclusions. A mistake many beginning writers make is to use only one source to support their ideas
-          </p>
-        </div>
+            <p>
+              Critical writing involves considering evidence to make reasoned conclusions. A mistake many beginning writers make is to use only one source to support their ideas
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://www.eapfoundation.com/writing/critical/">learn more</a>
           </div>
@@ -73,28 +76,28 @@
 
         <div class="card">
           <div class="subheading">
-          <h3>Why Critical Writing is unique?</h3>
-        </div>
+            <h3>Why Critical Writing is unique?</h3>
+          </div>
           <img src="subimage8.png" alt="photo2" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-            It is more like to develop argument and participate in the academic debate. You need to weigh up the evidence and arguments of others, and to contribute your own
-          </p>
-        </div>
+            <p>
+              It is more like to develop argument and participate in the academic debate. You need to weigh up the evidence and arguments of others, and to contribute your own
+            </p>
+          </div>
           <div class="button-style">
-              <a class="button" href="https://www2.le.ac.uk/offices/ld/resources/writing/writing-resources/critical-writing">Learn More</a>
+            <a class="button" href="https://www2.le.ac.uk/offices/ld/resources/writing/writing-resources/critical-writing">Learn More</a>
           </div>
         </div>
         <div class="card">
           <div class="subheading-2">
-          <h3>How can you improve Critical Writing? </h3>
-        </div>
+            <h3>How can you improve Critical Writing? </h3>
+          </div>
           <img src="subimage9.jpg" alt="photo3" class="card-img" style="width:100%">
           <div class="container-p">
-          <p >
-            Engane into a description, analyse and evaluate the claims. To do as such raise concerns like What? Where? How? Why? What If? What next?
-          </p>
-        </div>
+            <p>
+              Engane into a description, analyse and evaluate the claims. To do as such raise concerns like What? Where? How? Why? What If? What next?
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://intranet.birmingham.ac.uk/as/libraryservices/library/skills/asc/documents/public/pgtcriticalwriting.pdf">Learn More</a>
           </div>
