--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -32,7 +32,7 @@
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="index.html">Critical Thinking</a>
-        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="what_does_critical_thinking_involve.html">What Does Critical Thinking Involve</a>
         <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
         <a href="reading_critically.html">Reading Critically</a>
         <a href="academic_writing.html">For Academic Writing</a>
@@ -155,5 +155,4 @@
     })
   </script>
 </body>
-
 </html>
