--- a/Homepage/reading_critically.html
+++ b/Homepage/reading_critically.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav class="second-nav">
@@ -32,7 +34,7 @@
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="index.html">Critical Thinking</a>
-        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="what_does_critical_thinking_involve.html">What Does Critical Thinking Involve</a>
         <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
         <a href="reading_critically.html">Reading Critically</a>
         <a href="academic_writing.html">For Academic Writing</a>
@@ -46,11 +48,12 @@
     <div class="widthsize">
       <h2>Reading Critically</h2>
       <div class="container">
-      <div class="card-wrapper">
-
-   <iframe src="critical_reading.mp4"></iframe>
-   </div>
-   </div>
+        <div class="card-wrapper">
+          <video controls>
+            <source src="critical_reading.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
     </div>
   </section>
   <section>
@@ -58,14 +61,14 @@
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>Active Engagement In Lecture</h3>
-        </div>
+            <h3>Active Engagement In Lecture</h3>
+          </div>
           <img src="subimage1.jpg" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-            The process of analyzing, interpreting and evaluating when reading. Reading critically involves questioning both the text and our own reading of it.
-          </p>
-        </div>
+            <p>
+              The process of analyzing, interpreting and evaluating when reading. Reading critically involves questioning both the text and our own reading of it.
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://www.washington.edu/teaching/teaching-resources/engaging-students-in-learning/">learn more</a>
           </div>
@@ -73,29 +76,29 @@
 
         <div class="card">
           <div class="subheading">
-          <h3>Self-Questioning</h3>
-        </div>
+            <h3>Self-Questioning</h3>
+          </div>
           <img src="subimage6.jpg" alt="photo2" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-            Begin by asking questions to yourself which relates to the text and then look at the author’s argument to use as an evidence used to support it.
-          </p>
-        </div>
+            <p>
+              Begin by asking questions to yourself which relates to the text and then look at the author’s argument to use as an evidence used to support it.
+            </p>
+          </div>
           <div class="button-style">
-              <a class="button" href="https://www.ucl.ac.uk/ioe-writing-centre/critical-reading-and-writing/critical-reading-questions">Learn More</a>
+            <a class="button" href="https://www.ucl.ac.uk/ioe-writing-centre/critical-reading-and-writing/critical-reading-questions">Learn More</a>
           </div>
         </div>
 
         <div class="card">
           <div class="subheading-2">
-          <h3>Personal Engagement</h3>
-        </div>
-          <img src="subimage6.png" alt="photo3" class="card-img" style="width:100%">
+            <h3>Personal Engagement</h3>
+          </div>
+          <img src="subimage11.png" alt="photo3" class="card-img" style="width:100%">
           <div class="container-p">
-          <p >
-           Increase creativity yield relating the text with your personal knowledge and experience and to evaluate the claims from it
-          </p>
-        </div>
+            <p>
+              Increase creativity yield relating the text with your personal knowledge and experience and to evaluate the claims from it
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://www.ucl.ac.uk/ioe-writing-centre/critical-reading-and-writing/critical-reading-questions">Learn More</a>
           </div>
