--- a/Homepage/tutorial_and_seminar.html
+++ b/Homepage/tutorial_and_seminar.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Critical Thinking</title>
   <link rel="stylesheet" href="main.css" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <nav class="second-nav">
@@ -32,7 +34,7 @@
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="index.html">Critical Thinking</a>
-        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="what_does_critical_thinking_involve.html">What Does Critical Thinking Involve</a>
         <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
         <a href="reading_critically.html">Reading Critically</a>
         <a href="academic_writing.html">For Academic Writing</a>
@@ -46,11 +48,14 @@
     <div class="widthsize">
       <h2>Tutorial and Seminar</h2>
       <div class="container">
-      <div class="card-wrapper">
-
-   <iframe src="video2.mp4"></iframe>
-   </div>
-   </div>
+        <div class="card-wrapper">
+          <video controls>
+            <source src="video2.mp4" type="video/mp4">
+            <source src="video2.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
     </div>
   </section>
   <section>
@@ -58,14 +63,14 @@
       <div class="card-wrapper">
         <div class="card">
           <div class="subheading">
-          <h3>Active Engagement In Lecture</h3>
-        </div>
+            <h3>Active Engagement In Lecture</h3>
+          </div>
           <img src="subimage4.jpg" alt="TitleCriticalThinking" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-            The vital part is to consider your purpose, the needs of audience and how best to research and present the topic.
-          </p>
-        </div>
+            <p>
+              The vital part is to consider your purpose, the needs of audience and how best to research and present the topic.
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://www.washington.edu/teaching/teaching-resources/engaging-students-in-learning/">learn more</a>
           </div>
@@ -73,29 +78,29 @@
 
         <div class="card">
           <div class="subheading">
-          <h3>Cross-examine your objectives & audience.</h3>
-        </div>
+            <h3>Cross-examine your objectives & audience.</h3>
+          </div>
           <img src="subimage5.jpg" alt="photo2" class="card-img" style="width:100%">
           <div class="container-p">
-          <p>
-          Ask the right questions, generate hypotheses, decide what information is needed, and using all that to approach problems objectively.
-          </p>
-        </div>
+            <p>
+              Ask the right questions, generate hypotheses, decide what information is needed, and using all that to approach problems objectively.
+            </p>
+          </div>
           <div class="button-style">
-              <a class="button" href="https://www.fastcompany.com/90220768/3-ways-to-improve-your-presentation-skills">learn more</a>
+            <a class="button" href="https://www.fastcompany.com/90220768/3-ways-to-improve-your-presentation-skills">learn more</a>
           </div>
         </div>
 
         <div class="card">
           <div class="subheading-2">
-          <h3>Brainstrom Ideas</h3>
-        </div>
-          <img src="subimage6.png" alt="photo3" class="card-img" style="width:100%">
+            <h3>Brainstrom Ideas</h3>
+          </div>
+          <img src="subimage12.jpg" alt="photo3" class="card-img" style="width:100%">
           <div class="container-p">
-          <p >
-           Increase creativity yield by moving back and forth between brainstorming alone and in a group. Seemingly unrelated ideas may lead to something great.
-          </p>
-        </div>
+            <p>
+              Increase creativity yield by moving back and forth between brainstorming alone and in a group. Seemingly unrelated ideas may lead to something great.
+            </p>
+          </div>
           <div class="button-style">
             <a class="button" href="https://www.criticalthinking.org/pages/defining-critical-thinking/766">See the website</a>
           </div>
