--- a/Homepage/what_does_critical_thinking_involve.html
+++ b/Homepage/what_does_critical_thinking_involve.html
@@ -34,7 +34,7 @@
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="index.html">Critical Thinking</a>
-        <a href="what_does_critical_thinking_involve.html">Tutorial and Seminar Presentation</a>
+        <a href="what_does_critical_thinking_involve.html">What Does Critical Thinking Involve</a>
         <a href="tutorial_and_seminar.html">Tutorial and Seminar Presentation</a>
         <a href="reading_critically.html">Reading Critically</a>
         <a href="academic_writing.html">For Academic Writing</a>
@@ -49,8 +49,9 @@
       <h2>What does Critical Thinking Involve</h2>
       <div class="container">
         <div class="card-wrapper">
-
-          <iframe src="video.mp4"></iframe>
+          <video controls>
+            <source src="video.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
